--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Wordle</h1>
-    <p>Intenta adivinar la palabra de 5 letras:</p>
+    <p>Intenta adivinar la palabra:</p>
     <div id="word"></div>
     <form>
       <label for="guess">Adivina:</label>
