--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			cuántas letras coinciden con la palabra secreta y en qué posición se encuentran. 
 			Utiliza esta información para ir descubriendo la palabra secreta en cada intento.
 		</p>
-		<p>Tienes 6 intentos para intentar adivinar la palabra secreta. Al acabar los intentos se te mostrará un mensaje de alerta.</p>
+		<p>Introduce los intentos que crees necesarios para intentar adivinar la palabra secreta. Al acabar los intentos se te mostrará un mensaje de alerta.</p>
 		<p>¡Suerte!</p>
 		<button id="play-btn">Jugar</button>
 	</div>
