--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="container">
 		<h1>Instrucciones</h1>
-		<p>Wordle es un juego de palabras en el que tienes que adivinar una palabra secreta de 5 o más letras en 6 intentos.</p>
+		<p>Wordle es un juego de palabras en el que tienes que adivinar una palabra secreta de 5 o más letras.</p>
 		<p>Para jugar, simplemente introduce una palabra de 5 o más letras en la caja de texto y haz clic en el botón "Enviar". El juego te indicará 
 			cuántas letras coinciden con la palabra secreta y en qué posición se encuentran. 
 			Utiliza esta información para ir descubriendo la palabra secreta en cada intento.
